aula do dia 15/07

--- a/css/estilo.css
+++ b/css/estilo.css
@@ -77,13 +77,13 @@
 .modal form{
     width: 100%;
 }
-.modal form h3{
+.modal h3{
     display: flex;
     justify-content: space-between;
     align-items: center;
     margin-bottom: 26px;
 }
-.modal form h3 box-icon{
+.modal h3 box-icon{
     width: 40px;
     height: 40px;
     padding: 8px;
@@ -93,7 +93,7 @@
     border-radius: 20px;
     background-color: var(--gray3);
 }
-.modal form h3 box-icon:hover{
+.modal h3 box-icon:hover{
     background-color: var(--pink);
 }
 .modal form label{
@@ -112,6 +112,31 @@
 }
 .modal form input:focus{
     border-color: var(--pink);
+}
+
+.modal ul li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 6px;
+    border-radius: 5px;
+    background-color: var(--gray3);
+    padding: 6px;
+}
+
+.modal ul li box-icon {
+    width: 40px;
+    height: 40px;
+    padding: 8px;
+    fill: var(--light);
+    cursor: pointer;
+    transition-duration: 200ms;
+    border-radius: 20px;
+    background-color: var(--gray3);
+}
+
+.modal ul li box-icon:hover{
+    background-color: var(--pink);
 }
 
 
@@ -183,6 +208,10 @@ main{
     padding: 16px;
     border-radius: 5px;
 }
+#teams ul li.empty {
+    width: 100%;
+    text-align: center;
+}
 #teams ul li h5{
     display: flex;
     justify-content: space-between;
@@ -242,3 +271,4 @@ main{
     opacity: .85;
     visibility: visible;
 }
+
